# MotorNet

./: .gitignore  README.md  benchmark.py  environment.yml  pyproject.toml
examples/: arm26_reaching_example.py  benchmark_comparison.py  jax_reaching_example.py  train_and_visualize.py
examples/jax/: 0-muscle-demo.ipynb  1-build-effector.ipynb  2-states-and-simulation.ipynb  3-training.ipynb  4-environment-training.ipynb  README.md  trained_policy.pkl
examples/jax/.ipynb_checkpoints/: 1-build-effector-checkpoint.ipynb  3-training-checkpoint.ipynb  4-environment-training-checkpoint.ipynb
motornet/: effector.py  environment.py  muscle.py  policy.py  skeleton.py
motornet/utils/: kernels.py
motornet_jax/: README.md  __init__.py  plotor.py  requirements.txt  types.py
motornet_jax/effector/: __init__.py  arm26.py  effector.py
motornet_jax/environment/: __init__.py  environment.py
motornet_jax/integration/: __init__.py  integrators.py
motornet_jax/muscle/: __init__.py  base.py  compliant_tendon.py  mujoco_hill.py  relu_muscle.py  rigid_tendon.py  thelen.py
motornet_jax/policy/: __init__.py  gru.py  mlp.py  modular_gru.py
motornet_jax/skeleton/: __init__.py  arm.py  point_mass.py
motornet_jax/tests/: __init__.py  test_arm26.py  test_biomechanical_validation.py  test_environment.py  test_muscle.py  test_numerical_validation.py  test_policy.py  test_skeleton.py
motornet_jax/training/: __init__.py  losses.py  trainer.py
tests/: conftest.py  test_construction.py  test_effector.py  test_environment.py  test_muscle.py  test_simulation.py  test_skeleton.py
